[package]
name = "endpointsecurity"
version = "0.2.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"
description = "Nice (ish) bindings for the EndpointSecurity framework on macOS"
license-file = "LICENSE"
keywords = ["security", "macos", "endpoint"]
readme = "README.md"
homepage = "https://github.com/obelisk/endpointsecurity"

[dependencies]
block = "0.1.6"
env_logger = "0.7.1"
libc = "0.2.0"
log = "0.4.8"
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
serde_json = "1"
